--- a/Style.css
+++ b/Style.css
@@ -1,19 +1,33 @@
 body{
-    background-image: url(ragna.jpg);
+    background-image: url(zoro.png);
     font-family: 'Courier New', Courier, monospace;
     background-repeat: no-repeat;
     background-position: fixed;
     background-size: cover;
     font-weight: bold;
+    font-size: 35px;
 }
 
 h1{
-    color: rgb(221, 221, 14);
+    color: rgb(212, 0, 0);
+    margin:0%;
+    font-family: 'Courier New', Courier, monospace;
 }
 
-.Descriptions{
-    color: rgb(236, 228, 108);
-    font-size: 20px;
+.intro{
+    color:yellow;
+    font-size: 25px;
+    margin:0%;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+}
+
+
+.how{
+    color: yellow;
+    font-size: 30px;
+    font-family: 'Courier New', Courier, monospace;
+
 }
 
 .order{
@@ -22,10 +36,12 @@ h1{
     margin-bottom: 5px;
     margin-right: 5px;
     margin-left: 5px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .steps{
     text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .account{
@@ -33,21 +49,51 @@ h1{
     font-family: 'Courier New', Courier, monospace;
     font-style: monospace;
     font-size: 17px;
+    font-weight: bolder;
+}
+.verify{
+    color: red;
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    text-decoration: underline;
+    margin: 0%;
 }
 
 .game{
-    font-size: 20px;
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    color: red;
     text-decoration: underline;
+    margin: 0%;
+
 }
 .reg{
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 25px;
+    font-weight: bolder;
+    font-family: 'Courier New', Courier, monospace;
+    color: yellow;
 }
 .info{
+    color: red;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    font-size: 20px;
+    margin:0%;
+
+}
+
+.select{
     color: yellow;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    font-size: 20px;
+    margin:0%;
 }
 .payment{
     color: yellow;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 hr{
@@ -55,38 +101,58 @@ hr{
     background-color: white;
     border-color: white;
     width: 30%;
+    font-family: 'Courier New', Courier, monospace;
 }
-
 
 .link{
     color: yellow;
+    font-family: 'Courier New', Courier, monospace;
 }
 .link:visited{
     color: white;
+    font-family: 'Courier New', Courier, monospace;
 }
 .link:hover{
     color:red;
+    font-family: 'Courier New', Courier, monospace;
 }
 .link:active{
     color: brown;
+    font-family: 'Courier New', Courier, monospace;
 }
 .contacts{
     font-size: 30px;
     text-align: center;
     color: yellow;
+    font-family: 'Courier New', Courier, monospace;
 }
 .epicnpc{
     font-size: 30px;
+    font-family: 'Courier New', Courier, monospace;
 }
 .epicnpc{
     color: yellow;
+    font-family: 'Courier New', Courier, monospace;
 }
 .epicnpc:visited{
     color: white;
+    font-family: 'Courier New', Courier, monospace;
 }
 .epicnpc:hover{
     color:red;
+    font-family: 'Courier New', Courier, monospace;
 }
 .epicnpc:active{
     color: brown;
+    font-family: 'Courier New', Courier, monospace;
+}
+fieldset{
+    font-size: 20px;
+    color: yellow;
+    font-family: 'Courier New', Courier, monospace;
+}
+legend{
+    text-align: center;
+    font-size: 30px;
+    font-family: 'Courier New', Courier, monospace;
 }
