--- a/Style.css
+++ b/Style.css
@@ -15,23 +15,28 @@ body{
         src: url(grind.ttf);
 }
 h1{
-    color:white;
     margin:0px;
     font-family: myfont3;
+    background: linear-gradient(45deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .span{
-    background-color: black;
+    white-space: nowrap;
     padding-right: 10px;
     padding-left: 10px;
     
 }
 .intro{
-    color:white;
     font-size: 25px;
     margin:0%;
     font-family: myfont3;
     font-weight: bolder;
     padding:0px;
+    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
 }
 
 
@@ -49,19 +54,21 @@ h1{
     margin-right: 5px;
     margin-left: 5px;
     font-family: myfont3;
+
 }
 
 .steps{
     text-align: center;
     font-family: myfont3;
+
 }
 
 .account{
-    color: yellow;
     font-family: myfont3;
     font-style: monospace;
     font-size: 17px;
     font-weight: bolder;
+
 }
 .verify{
     color: red;
@@ -70,13 +77,19 @@ h1{
     font-weight: bolder;
     text-decoration: underline;
     margin: 0%;
+    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .game{
     font-size: 25px;
     font-family: myfont3;
     font-weight: bolder;
-    color: white;
+    background-size: 100%;
+    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     text-decoration: underline;
     margin: 0%;
 
@@ -85,7 +98,10 @@ h1{
     font-size: 25px;
     font-weight: bolder;
     font-family: myfont3;
-    color: red;
+    background-size: 100%;
+    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .info{
     color: white;
@@ -93,7 +109,6 @@ h1{
     font-weight: bolder;
     font-size: 20px;
     margin:auto;
-
 }
 
 .select{
