--- a/Style.css
+++ b/Style.css
@@ -22,21 +22,23 @@ h1{
     -webkit-text-fill-color: transparent;
 }
 .span{
-    white-space: nowrap;
+    background-color: black;
     padding-right: 10px;
     padding-left: 10px;
+
     
 }
+
 .intro{
     font-size: 25px;
-    margin:0%;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 0px;
+    margin-bottom: 0px;
     font-family: myfont3;
     font-weight: bolder;
-    padding:0px;
-    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    
+    padding: 10px;
+    color: white;
 }
 
 
@@ -44,6 +46,7 @@ h1{
     color: red;
     font-size: 30px;
     font-family: myfont3;
+    text-align: center;
 
 }
 
@@ -68,6 +71,7 @@ h1{
     font-style: monospace;
     font-size: 17px;
     font-weight: bolder;
+    margin-top: 0%;
 
 }
 .verify{
@@ -98,6 +102,7 @@ h1{
     font-size: 25px;
     font-weight: bolder;
     font-family: myfont3;
+    margin: top 100px;
     background-size: 100%;
     background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
     background-clip: text;
@@ -108,7 +113,9 @@ h1{
     font-family: myfont3;
     font-weight: bolder;
     font-size: 20px;
-    margin:auto;
+    text-align: center;
+    display: block;
+
 }
 
 .select{
