--- a/Style.css
+++ b/Style.css
@@ -17,7 +17,7 @@ body{
 h1{
     margin:0px;
     font-family: myfont3;
-    background: linear-gradient(45deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
+    background: linear-gradient(45deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(180, 6, 6)75%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -43,10 +43,12 @@ h1{
 
 
 .how{
-    color: red;
     font-size: 30px;
     font-family: myfont3;
     text-align: center;
+    background: linear-gradient(45deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(180, 6, 6)75%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 
 }
 
@@ -81,7 +83,7 @@ h1{
     font-weight: bolder;
     text-decoration: underline;
     margin: 0%;
-    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
+    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(212, 12, 12)75%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -90,31 +92,34 @@ h1{
     font-size: 25px;
     font-family: myfont3;
     font-weight: bolder;
-    background-size: 100%;
+    padding: 0px;
+    margin-left: 40%;
+    margin-right: 0%;
     background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-decoration: underline;
-    margin: 0%;
-
 }
+
 .reg{
-    font-size: 25px;
+    font-size: 30px;
     font-weight: bolder;
     font-family: myfont3;
-    margin: top 100px;
-    background-size: 100%;
+    padding: 0px;
+    text-align: center;
     background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 .info{
-    color: white;
     font-family: myfont3;
     font-weight: bolder;
     font-size: 20px;
     text-align: center;
     display: block;
+    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(169, 172, 21)50%, rgb(0,0,255)75%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 
 }
 
