--- a/Style.css
+++ b/Style.css
@@ -99,25 +99,51 @@ h1{
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+.select1{
+    height: 30px;
+    padding: 5px;
+    font-size: 15x;
+    font-weight: bolder;
+    font-family: myfont3;
+}
 
 .reg{
     font-size: 30px;
     font-weight: bolder;
     font-family: myfont3;
-    padding: 0px;
     text-align: center;
     background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+.reg2{
+    text-align: center;
+}
+.holder{
+    display: inline-block;
+    height: 30px;
+    padding: 2px;
+    width: 200px;
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.button{
+    text-align: center;
+    display: inline-block;
+    width: 100px;
+    height: 30px;
+    padding: 5px;
+    font-size: 18px;
+}
 
 .info{
     font-family: myfont3;
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 30px;
     text-align: center;
     display: block;
-    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(169, 172, 21)50%, rgb(0,0,255)75%);
+    background: linear-gradient(90deg,rgb(179, 9, 9)35%,rgb(255, 255, 255)75%, rgb(0,0,255)0%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 
