--- a/Style.css
+++ b/Style.css
@@ -30,7 +30,7 @@ h1{
 }
 
 .intro{
-    font-size: 25px;
+    font-size: 30px;
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 0px;
@@ -108,7 +108,7 @@ h1{
 }
 
 .reg{
-    font-size: 30px;
+    font-size: 50px;
     font-weight: bolder;
     font-family: myfont3;
     text-align: center;
@@ -167,6 +167,13 @@ hr{
     border-color: white;
     width: 30%;
 }
+.warning{
+    background-color: black;
+    color: red;
+    text-align: center;
+    margin-right: 30%;
+    margin-left: 30%;
+}
 
 .link{
     color: yellow;
@@ -214,6 +221,8 @@ fieldset{
     font-size: 20px;
     color: yellow;
     font-family: myfont3;
+    margin-right: 30%;
+    margin-left: 30%;
 }
 legend{
     text-align: center;
