--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,7 @@ body{
     background-position: fixed;
     background-size: cover;
     font-weight: bold;
-    font-size: 35px;
+    font-size: 30px;
 }
 @font-face {
     font-family: myfont3;
@@ -30,20 +30,20 @@ h1{
 }
 
 .intro{
-    font-size: 30px;
+    font-size: 24px;
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: myfont3;
     font-weight: bolder;
-    padding: 10px;
+    padding: 8px;
     color: white;
 }
 
 
 .how{
-    font-size: 30px;
+    font-size: 24px;
     font-family: myfont3;
     text-align: center;
     background: linear-gradient(45deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(180, 6, 6)75%);
@@ -78,24 +78,24 @@ h1{
 }
 .verify{
     color: red;
-    font-size: 25px;
+    font-size: 30px;
     font-family: myfont3;
     font-weight: bolder;
     text-decoration: underline;
     margin: 0%;
-    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(212, 12, 12)75%);
+    background: linear-gradient(180deg,rgb(255,0,0)25%,rgb(0,255,0)75%, rgb(212, 12, 12)25%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
 .game{
-    font-size: 25px;
+    font-size: 24px;
     font-family: myfont3;
     font-weight: bolder;
     padding: 0px;
     margin-left: 40%;
     margin-right: 0%;
-    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
+    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(141, 38, 69)75%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -108,11 +108,14 @@ h1{
 }
 
 .reg{
-    font-size: 50px;
+    font-size: 30px;
     font-weight: bolder;
     font-family: myfont3;
+    padding: 5px;
     text-align: center;
-    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(0,0,255)75%);
+    margin-right: 30%;
+    margin-left: 30%;
+    background: linear-gradient(90deg,rgb(255,0,0)0%,rgb(0,255,0)50%, rgb(141, 38, 69)75%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -131,21 +134,31 @@ h1{
 .button{
     text-align: center;
     display: inline-block;
+    font-family: myfont3;
     width: 100px;
     height: 30px;
     padding: 5px;
     font-size: 18px;
+    border-color:white;
+    background-color: gray;
+
 }
 
 .info{
     font-family: myfont3;
     font-weight: bolder;
-    font-size: 30px;
+    font-size: 24px;
     text-align: center;
     display: block;
-    background: linear-gradient(90deg,rgb(179, 9, 9)35%,rgb(255, 255, 255)75%, rgb(0,0,255)0%);
+    background: linear-gradient(90deg,rgb(179, 9, 9)35%,rgb(255, 255, 255)75%, rgb(119, 119, 129)0%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
+
+}
+.terms{
+    font-weight: bolder;
+    color: red;
+    text-align: center;
 
 }
 
@@ -192,13 +205,13 @@ hr{
     font-family: myfont3;
 }
 .contacts{
-    font-size: 30px;
+    font-size: 24px;
     text-align: center;
     color: yellow;
     font-family: myfont3;
 }
 .epicnpc{
-    font-size: 30px;
+    font-size: 24px;
     font-family: myfont3;
 }
 .epicnpc{
@@ -226,6 +239,6 @@ fieldset{
 }
 legend{
     text-align: center;
-    font-size: 30px;
+    font-size: 24px;
     font-family: myfont3;
 }
